update instances, services and controller